# 6226264-sands-python

./: README.md  Untitled.ipynb  Untitled1.ipynb  actualprojectfile.py  hello.py  how COMMIT_HASHfilename.py  jupiterforrunning.ipynb  mypmidtermproject_start.py  pyproject.toml  run.py  signals.py  test_my_function.py  test_signals.py  testinandcoding.ipynb
.ipynb_checkpoints/: run-checkpoint.py  testinandcoding-checkpoint.ipynb
AESB2122_project/: run.py  signals.py  test_my_function.py
my-awesome-project/: pyproject.toml
