[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "Madelief"
version = "0.1.0"
description = "generating, time shifting and time scaling of a sine and sawtooth wave, including docstrings and testing"
authors = [
    {name = "Madelief, email = "mschenkel@tudelft.nl}
]
dependencies = ["what", "packages", "you-actually-use"]