[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "AESB2122_project"
version = "0.1.0"
description = "generating, time shifting and time scaling of a sine and sawtooth wave, including docstrings and testing"
authors = [{name = "Madelief Schenkel, email = "mschenkel@tudelft.nl}]
dependencies =  ["numpy", "scipy", "matplotlib"]